ant:abcl.test: Specify JVM args for permgen size so ansi-compiled runs.
TODO These should probably be parameterized, and settable from
properties, for all ABCL invocations.